--- a/produtos.html
+++ b/produtos.html
@@ -5,28 +5,40 @@
 </head>
 <body>
 
-<h1>Loja online</h1>
-<p>Periféricos.</p>
 
-<table style="width:15%">
+<style>
+table, th, td {
+    border: 1px solid black;
+	padding: 5px;
+	border-collapse: collapse;	
+               }
+</style>
+
+<h1>Loja online</h1>
+<p>Produtos</p>
+
+<table style="width:100%">
+
   <tr>
-    <th>Nome</th>
-    <th>Preço</th> 
-   
+    <th>Nome </th>
+    <th>Preço</th>    
   </tr>
-  <tr>
+  
+  <tr>  
     <td>Memoria 512</td>
-    <td>R$: 200,00</td>    
+    <td>R$: 200,00 </td>    
   </tr>
+  
   <tr>
     <td>Pendrive</td>
-    <td>R$ 40,00<td>    
-
-  <tr>
-    <td>iPhone</td>
-    <td>R$ 3000,00<td>     
-  </tr>	
+    <td>R$ 40,00</td>  
   </tr>
+  
+  <tr>
+    <td>iPhone    </td>
+    <td>R$ 3000,00</td>   
+  </tr>
+  
 </table>
 
 </body>
